--- a/jsconfig.json
+++ b/jsconfig.json
@@ -10,8 +10,9 @@
   "compilerOptions": {
     "baseUrl": "src",
     "paths": {
-      "@/*": ["*"]
+      "@/*": ["*"],
+      "@components/*": ["components/*"],
+      "@app/*": ["app/*"]
     }
   }
 }
-
