--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/postcss": "^4.1.4",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
+    "bizlinker-web": "file:",
     "cheerio": "^1.0.0",
     "dotenv": "^16.5.0",
     "fs": "^0.0.1-security",
