--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@headlessui/react": "^2.2.3",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/postcss": "^4.1.4",
+    "@tanstack/react-query": "^5.80.6",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "bizlinker-web": "file:",
     "cheerio": "^1.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "daisyui": "^5.0.43",
     "dotenv": "^16.5.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
@@ -35,12 +39,15 @@
     "react-leaflet": "^5.0.0",
     "slugify": "^1.6.6",
     "swiper": "^11.2.8",
+    "swr": "^2.3.3",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.4",
     "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "eslint": "^9",
-    "eslint-config-next": "15.3.1"
+    "eslint-config-next": "15.3.1",
+    "tw-animate-css": "^1.3.4"
   }
 }
