--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "daisyui": "^5.0.43",
     "dotenv": "^16.5.0",
+    "framer-motion": "^12.16.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
@@ -30,10 +31,12 @@
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.0",
     "next": "^15.3.1",
+    "next-auth": "^4.24.11",
     "postcss": "^8.5.3",
     "puppeteer": "^24.8.2",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "rc-slider": "^11.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
