--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^8.14.0",
     "next": "^15.3.1",
     "next-auth": "^4.24.11",
+    "node-fetch": "^3.3.2",
     "postcss": "^8.5.3",
     "puppeteer": "^24.8.2",
     "puppeteer-extra": "^3.3.6",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/react": "19.1.8",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "tw-animate-css": "^1.3.4"
