--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "add-businesses": "node -r esm scripts/addDefaultBusinesses.js"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.3",
@@ -17,6 +18,7 @@
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "bizlinker-web": "file:",
+    "chart.js": "^4.5.0",
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -39,6 +41,7 @@
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "rc-slider": "^11.1.8",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
     "slugify": "^1.6.6",
